# heart-failure

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
heart_failure/: __init__.py  dataset.py  features.py  plots.py
heart_failure/modeling/: predict.py  train.py
